# csv-analysis-agent

./: README.md  main.py  pyproject.toml
src/: agent.py  api.py
